--- a/src/app/cargos/cadastro-cargo/cadastro-cargo.component.html
+++ b/src/app/cargos/cadastro-cargo/cadastro-cargo.component.html
@@ -31,7 +31,7 @@
         <div class="row">
             <!-- SALVAR -->
             <div class="col-auto botoes">
-                <input class="btn btn-primary float-right" type="button" value="Salvar" [disabled]="!cargoForm.valid" (click)="salvarCargo()">
+                <input class="btn btn-primary float-right" type="button" value="Salvar" (click)="salvarCargo()">
             </div>
             <!-- SALVAR -->
 
