--- a/src/app/funcionarios/cadastro-funcionario/cadastro-funcionario.component.html
+++ b/src/app/funcionarios/cadastro-funcionario/cadastro-funcionario.component.html
@@ -1,4 +1,5 @@
 <app-alerta-sucesso [podeExibir]="sucesso"></app-alerta-sucesso>
+<app-alerta-erro [podeExibir]="mensagemErro.length > 0" [mensagem]="mensagemErro"></app-alerta-erro>
 
 <section class="content-header">
     <div class="row">
@@ -58,7 +59,7 @@
             <!-- SALVAR -->
             <div class="col-auto botoes">
                 <input class="btn btn-primary float-right" type="button" value="Salvar"
-                    [disabled]="!funcionarioForm.valid" (click)="salvarFuncionario()">
+                    (click)="salvarFuncionario()">
             </div>
             <!-- SALVAR -->
 
