--- a/src/app/empresas/listagem-empresa/listagem-empresa.component.html
+++ b/src/app/empresas/listagem-empresa/listagem-empresa.component.html
@@ -15,7 +15,7 @@
                 <td>{{empresa?.cnpj | mask: '00.000.000/0000-00'}}</td>
                 <td>{{empresa?.fundation}}</td>
                 <td>
-                    <div class="dropdown">
+                    <div class="dropdown" style="float: right;">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Mais opções
