--- a/src/app/cargos/cargos.component.html
+++ b/src/app/cargos/cargos.component.html
@@ -1,6 +1,6 @@
 <section class="content-header">
     <div class="row">
-        <div class="col-9">
+        <div class="col-8 col-md-9">
             <h3>{{titulo}}</h3>
         </div>
         <div class="col-auto btn-novo">
@@ -16,7 +16,7 @@
         <div class="row">
 
             <!-- DESCRIÇÃO -->
-            <div class="col-9">
+            <div class="col-8 col-md-9">
                 <label for="descricao-cargo">Descrição</label>
                 <input class="form-control form-control-sm" type="text" id="descricao-cargo" formControlName="description">
             </div>
