--- a/src/app/empresas/cadastro-empresa/cadastro-empresa.component.html
+++ b/src/app/empresas/cadastro-empresa/cadastro-empresa.component.html
@@ -15,7 +15,7 @@
 
         <div class="row">
             <!-- NOME -->
-            <div class="col">
+            <div class="col-sm-4 col-md">
                 <label for="nome-empresa">Nome</label>
                 <input type="text" class="form-control form-control-sm" [class.is-invalid]="name.invalid" [class.is-valid]="name.valid" id="nomeEmpresa" formControlName="name"
                     maxlength="150" required>
@@ -31,7 +31,7 @@
         <div class="row">
 
             <!-- CNPJ -->
-            <div class="col-6">
+            <div class="col-sm-4 col-md-6">
                 <label for="cnpj-empresa">CNPJ</label>
                 <input type="text" class="form-control form-control-sm" [class.is-invalid]="cnpj.invalid" [class.is-valid]="cnpj.valid" formControlName="cnpj" name="cnpjEmpresa"
                      mask="00.000.000/0000-00" pattern="{{regexCnpj}}" required 
@@ -48,7 +48,7 @@
             <!-- CNPJ -->
 
             <!-- DATA FUNDAÇÃO -->
-            <div class="col-6">
+            <div class="col-sm-4 col-md-6">
                 <label for="fundacao-empresa">Data Fundação</label>
                 <input class="form-control form-control-sm" type="date" max="{{today()}}" [class.is-invalid]="fundation.errors" [class.is-valid]="!fundation.errors" id="fundacaoEmpresa" formControlName="fundation">
             </div>
