--- a/src/app/empresas/empresas.component.html
+++ b/src/app/empresas/empresas.component.html
@@ -1,6 +1,6 @@
 <section class="content-header">
     <div class="row">
-        <div class="col-9">
+        <div class="col-8 col-md-9">
             <h3>{{titulo}}</h3>
         </div>
         <div class="col-auto btn-novo">
@@ -16,21 +16,21 @@
         <div class="row">
             
             <!-- NOME -->
-            <div class="col-3">
+            <div class="col-sm-4 col-md-3">
                 <label for="nome-empresa">Nome</label>
                 <input class="form-control form-control-sm" type="text" id="nome-empresa" formControlName="name">
             </div>
             <!-- NOME -->
 
             <!-- CNPJ -->
-            <div class="col-3">
+            <div class="col-sm-4 col-md-3">
                 <label for="cnpj-empresa">CNPJ</label>
                 <input class="form-control form-control-sm" type="text" id="cnpj-empresa" [dropSpecialCharacters]="false" mask="00.000.000/0000-00" formControlName="cnpj">
             </div>
             <!-- CNPJ -->
 
             <!-- DATA FUNDAÇÃO -->
-            <div class="col-3">
+            <div class="col-8 col-md-3">
                 <label for="fundacao-empresa">Data Fundação</label>
                 <input class="form-control form-control-sm" type="text" id="fundacao-empresa" [dropSpecialCharacters]="false" mask="00/00/0000" formControlName="fundation">
             </div>
