--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -1,6 +1,6 @@
 <section class="content-header">
     <div class="row">
-        <div class="col-9">
+        <div class="col-8 col-md-9">
             <h3>{{titulo}}</h3>
         </div>
         <div class="col-auto btn-novo">
@@ -15,21 +15,21 @@
 
         <div class="row">
             <!-- NOME -->
-            <div class="col-3">
+            <div class="col-sm-4 col-md-3">
                 <label for="nome-funcionario">Nome</label>
                 <input class="form-control form-control-sm" type="text" id="nome-funcionario" formControlName="name">
             </div>
             <!-- NOME -->
 
             <!-- CPF -->
-            <div class="col-3">
+            <div class="col-sm-4 col-md-3">
                 <label for="cpf-funcionario">CPF</label>
                 <input class="form-control form-control-sm" type="text" id="cpf-funcionario" [dropSpecialCharacters]="false" mask="000.000.000-00" formControlName="cpf">
             </div>
             <!-- CPF -->
 
             <!-- DATA CONTRATAÇÃO -->
-            <div class="col-3">
+            <div class="col-8 col-md-3">
                 <label for="contratacao-funcionario">Data Contratação</label>
                 <input class="form-control form-control-sm" type="text" id="contratacao-contratacao" [dropSpecialCharacters]="false" mask="00/00/0000" formControlName="hiring">
             </div>
