--- a/src/app/funcionarios/listagem-funcionario/listagem-funcionario.component.html
+++ b/src/app/funcionarios/listagem-funcionario/listagem-funcionario.component.html
@@ -15,7 +15,7 @@
                 <td>{{funcionario?.cpf | mask: '000.000.000-00'}}</td>
                 <td>{{funcionario?.hiring}}</td>
                 <td>
-                    <div class="dropdown">
+                    <div class="dropdown" style="float: right;">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Mais opções
