--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,37 @@
 .content{
     margin-top: 10px;
 }
+
+.titulo-home{
+    text-align: center;
+}
+
+@media (max-width: 575.98px) { 
+
+ }
+
+@media (min-width: 576px) and (max-width: 767.98px) { 
+ 
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) { 
+
+    .botoes-home{
+        margin-left: 115px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {  
+
+    .botoes-home{
+        margin-left: 30%;
+    }
+
+}
+@media (min-width: 1200px) {
+
+    .botoes-home{
+        margin-left: 33%;
+    }
+
+}
