--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,14 +4,24 @@
 
 <section class="content">
 
-    <div class="jumbotron welcome-jumbotron">
-        <h1>Projeto Onboarding Front-end</h1>
-        <div class="btn-group" role="group">
-            <a class="btn btn-primary btn-lg" [routerLink]="['/empresas']">Empresas</a>
-            <a class="btn btn-primary btn-lg" [routerLink]="['/funcionarios']">Funcionários</a>
-            <a class="btn btn-primary btn-lg" [routerLink]="['/cargos']">Cargos</a>
+    <div class="container-sm">
+        <div class="jumbotron welcome-jumbotron">
+            <div class="titulo-home">
+                <h1 >Projeto Onboarding Front-end</h1>
+            </div>
+            <div class="btn-group botoes-home d-none d-md-block" role="group">
+                <a class="btn btn-primary btn-lg" [routerLink]="['/empresas']">Empresas</a>
+                <a class="btn btn-primary btn-lg" [routerLink]="['/funcionarios']">Funcionários</a>
+                <a class="btn btn-primary btn-lg" [routerLink]="['/cargos']">Cargos</a>
+            </div>
+
+            <div class="btn-group-vertical d-block d-sm-none" role="group">
+                <a class="btn btn-primary btn-lg" [routerLink]="['/empresas']">Empresas</a>
+                <a class="btn btn-primary btn-lg" [routerLink]="['/funcionarios']">Funcionários</a>
+                <a class="btn btn-primary btn-lg" [routerLink]="['/cargos']">Cargos</a>
+            </div>
+
         </div>
     </div>
-
 </section>
 <!-- FIM -->
